sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:18: error: '(' expected but '{' found.
  } while {swap}
          ^